--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keybinding-resolver",
-  "main": "./lib/main",
+  "main": "./dist/main.js",
   "version": "0.39.1",
   "description": "Show what commands a keybinding resolves to",
   "license": "MIT",
@@ -17,7 +17,23 @@
     "temp": "^0.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.0",
+    "@rollup/plugin-commonjs": "^23.0.0",
+    "rollup": "^3.2.3",
     "standard": "^10.0.3"
+  },
+  "files": [
+    "dist",
+    "keymaps",
+    "menus",
+    "styles"
+  ],
+  "scripts": {
+    "build": "rollup -c",
+    "prepare": "npm run build"
   },
   "standard": {
     "env": {
